# jogo-da-forca

./: .gitignore  CMakeLists.txt  README.md  author.md  scores.txt  script.py
data/: a.txt  palavrasP.txt  scores.txt  script.py  teste.txt
data/arquivos_testes_palavras/: palavras_caracteres_invalidos.txt  palavras_frequencia_inexistente.txt  palavras_frequencia_negativa.txt  palavras_menores.txt
data/arquivos_testes_scores/: scores_campo_vazio.txt  scores_mais_de_;.txt  scores_menos_de.txt
data/script/: script.py
include/: Forca.hpp
src/: forca.cpp  forca_text.cpp  main.cpp
